[gd_scene load_steps=6 format=3 uid="uid://blnxtveesvu8q"]

[ext_resource type="Script" uid="uid://co5uhxf6j1unn" path="res://Scenes/Menu/continue.gd" id="1_821r8"]
[ext_resource type="PackedScene" uid="uid://bgxyenfwy5uc2" path="res://Scenes/Animations/transition_screen.tscn" id="1_n1o2o"]
[ext_resource type="FontFile" uid="uid://t6mmi7ubb1q1" path="res://fonts/GamejamFont-Regular.otf" id="2_821r8"]

[sub_resource type="Theme" id="Theme_ox82g"]
default_font = ExtResource("2_821r8")
default_font_size = 35

[sub_resource type="Theme" id="Theme_lvw8p"]
default_font = ExtResource("2_821r8")
default_font_size = 35

[node name="Continue" type="CanvasLayer"]
script = ExtResource("1_821r8")

[node name="transition_screen" parent="." instance=ExtResource("1_n1o2o")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = -62.5
offset_right = 69.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Continue" type="Button" parent="CanvasLayer/MenuUI/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ox82g")
text = "Continue"

[node name="Quit" type="Button" parent="CanvasLayer/MenuUI/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Continue")
theme = SubResource("Theme_lvw8p")
text = "Quit"

[connection signal="pressed" from="CanvasLayer/MenuUI/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
